--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,21 +1,18 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="format-detection" content="telephone=no">
+{% extends "layout.html" %}
+{% block head %}
   <title>主页</title>
-</head>
-
-<body>
+  <style>
+    .demo1 h1{
+      letter-spacing: 0rem;
+    }
+  </style>
+{% endblock %}
+{% block content %}
   <div id="app">
     <ul>
       <li><a href="/snap">打响指</a></li>
-      <li><a href="/aviator">打飞机</a></li>
+      <li><a href="/aviator">玩飞机</a></li>
       <li><a href="/rabbit">打兔子</a></li>
     </ul>
   </div>
-</body>
-</html>
+{% endblock %}
