--- a/app/view/snap.html
+++ b/app/view/snap.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="format-detection" content="telephone=no">
-  <title>大家一起来打响指吧</title>
+{% extends "layout.html" %}
+{% block head %}
+  <title>天天打响指</title>
   <style>
     html, body {
       height: 100%;
@@ -40,9 +33,8 @@
       visibility: hidden;
     }
   </style>
-</head>
-
-<body>
+{% endblock %}
+{% block content %}
   <div id="app">
     <div class="wrapper">
       <img id="img" src="/public/static/img/test.jpg">
@@ -153,6 +145,4 @@
       return canvas;
     }
   </script>
-</body>
-
-</html>
+{% endblock %}
