feat: 底部添加备案号

--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -13,5 +13,8 @@
 </head>
 <body>
   {% block content %}{% endblock %}
+  <div class="footer">
+    <a href="//www.beian.miit.gov.cn">工业和信息化部备案管理系统网站 浙ICP备18049420号-2</a>
+  </div>
 </body>
 </html>
