--- a/app/public/static/css/style.css
+++ b/app/public/static/css/style.css
@@ -11,3 +11,15 @@ a {
 .index .list li{
   margin: 10px 0;
 }
+.footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  background: #000;
+}
+.footer a {
+  color: #fff;
+}
