feat: 修改备案号格式

--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="wap-font-scale" content="no">
-  <meta name="apple-mobile-web-app-capable" content="no" />
-  <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="/public/static/css/style.css">
-  {% block head %}{% endblock %}
-</head>
-<body>
-  {% block content %}{% endblock %}
-  <div class="footer">
-    <a href="//www.beian.miit.gov.cn">工业和信息化部备案管理系统网站 浙ICP备18049420号-2</a>
-  </div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
+    />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="wap-font-scale" content="no" />
+    <meta name="apple-mobile-web-app-capable" content="no" />
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="stylesheet" href="/public/static/css/style.css" />
+    {% block head %}{% endblock %}
+  </head>
+  <body>
+    {% block content %}{% endblock %}
+    <div class="footer">
+      <a href="//www.beian.miit.gov.cn">备案号：浙ICP备18049420号-2</a>
+    </div>
+  </body>
 </html>
