--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -12,12 +12,13 @@
     <meta name="apple-mobile-web-app-capable" content="no" />
     <meta name="format-detection" content="telephone=no" />
     <link rel="stylesheet" href="/public/static/css/style.css" />
+    <title>技术分享</title>
     {% block head %}{% endblock %}
   </head>
   <body>
     {% block content %}{% endblock %}
     <div class="footer">
-      <a href="//www.beian.miit.gov.cn">备案号：浙ICP备18049420号-2</a>
+      <a href="https://beian.miit.gov.cn">备案号：浙ICP备18049420号-2</a>
     </div>
   </body>
 </html>
